                       User-Visible WebAuth Changes

WebAuth 4.5.6 (unreleased)

    Set the correct template variable when the code field is left blank on
    the WebLogin multifactor form.

    Map unknown realm and invalid principal errors during Kerberos
    authentication in mod_webkdc to WA_PEC_USER_REJECTED instead of a
    generic Kerberos error.  This will display a more accurate error
    message to the user of WebLogin instead of a generic internal error
    message.

    Correct a bug in the workaround for parsing of invalid XML from the
    WebKDC in WebLogin that caused it to not be effective.

    Log a more detailed error message on WebAuth exceptions during
    WebLogin password change.

WebAuth 4.5.5 (2013-08-28)

    Fix replay detection in WebLogin to use the same memcached object
    naming convention when registering authentications and when checking
    for a previous authentication.

    If the login is rejected by the user information service, WebLogin now
    displays a more specific error instead of the generic "something went
    wrong" error page.

    If a multifactor authentication is rejected by the validation service,
    the user is now returned to the multifactor authentication screen and
    the error message is provided to the template, rather than taking the
    user to a dead-end error page with a generic error.

    If enabled, rate limiting and replay detection are also applied to the
    multifactor login page in addition to the password login page.

    Support remembering that the user has been sent an SMS message already
    when redisplaying the multifactor login page after an error.  For this
    to work properly, local templates will have to be updated to set the
    form parameter multifactor_sentauth if an SMS message has already been
    sent.  See the sample multifactor.tmpl file for an example.

WebAuth 4.5.4 (2013-08-16)

    If the user presents a login token for one user and a webkdc-proxy