@@ -32,7 +32,8 @@ dont_cache(MWA_REQ_CTXT *rc)
     rc->r->mtime = apr_time_now();
     apr_table_addn(rc->r->err_headers_out, "Pragma", "no-cache");
     apr_table_setn(rc->r->err_headers_out, "Cache-Control",
-                   "no-cache, no-store");
+                   "private, no-cache, no-store, max-age=0");
+    apr_table_addn(rc->r->err_headers_out, "Vary", "*");
 }
 
 
